[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
bytecodec = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
libp2p = { version = "0.56.0", features = ["kad", "macros", "noise", "ping", "rsa", "tcp", "yamux"] }
libp2p-tcp = { version = "0.44.0", features = ["tokio"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
signal-hook = "0.3.18"
stun = "0.8.0"
stun_codec = "0.4.0"
tokio = { version = "1.47.1", features = ["full", "net"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["net", "codec"] }

[[bin]]
name = "performance_benchmark"
path = "src/bin/performance_benchmark.rs"

[[bin]]
name = "nat_traversal_test"
path = "src/bin/nat_traversal_test.rs"

[[bin]]
name = "improved_nat_traversal_test"
path = "src/bin/improved_nat_traversal_test.rs"